--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Scott Hansford's liri-node-app</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
         
